--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,8 @@ main {
                 font-weight: 600;
                 text-transform: uppercase;
                 padding: 1rem;
+                display: flex;
+                justify-content: space-between;
             }
             
             & details.collapse div.description {
